<resources>
    <string name="app_name">Jolgorio</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="videollamada">Videollamada</string>
    <string name="title_activity_contacts">activity_contacts</string>
    <string name="tab_contacts">Contactos</string>
    <string name="tab_favorites">Favoritos</string>
    <string name="tab_registro">Registro</string>
    <string name="contactos">Contactos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="Name" />
    <string name="mis_trabajos">Mis Trabajos</string>
    <string name="mi_progreso">Mi Progreso</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="este_mes">Este mes</string>
    <string name="Logros">Logros </string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="desea_realizar_la_n_llamada_al_centro_n_de_ayuda">¿Desea realizar la llamada al centro de ayuda?</string>
    <string name="est_seguro_que_desea_salir_del_juego">¿Está seguro que desea salir del juego?</string>
    <string name="pasos_0">Pasos: 0</string>
    <string name="tiempo_00_00">Tiempo: 00:00</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="nombre">Nombre</string>
    <string name="est_seguro_que_desea_salir_de_la_actividad">¿Está seguro que desea salir de la actividad?</string>
    <string name="est_seguro_que_desea_salir_sin_guardar">¿Está seguro que desea salir sin guardar?</string>
    <string name="actividades">Actividades</string>

</resources>