<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cornerRadius="9dp"
    android:padding="15dp">

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/desea_realizar_la_n_llamada_al_centro_n_de_ayuda"
        android:textColor="@color/black"
        android:textSize="29sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/alertNObutton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textAlignment="center"
        app:cornerRadius="9dp"
        app:backgroundTint="#E28E15"
        android:fontFamily="@font/poppins_medium"
        android:layout_below="@id/alertTitle"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/alertYESbutton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:textAlignment="center"
        android:layout_marginStart="50dp"
        android:text="@string/si"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:backgroundTint="#227F84"
        app:cornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_medium"
        android:layout_below="@id/alertTitle"
        android:layout_toEndOf="@id/alertNObutton"
        android:layout_marginTop="20dp"/>
</RelativeLayout>