<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainMenuFragment">

    <RelativeLayout
        android:id="@+id/banner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/my_profile"
            android:layout_width="220dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:layout_centerInParent="true"
            android:text="My Perfil"
            android:layout_marginTop="30dp"
            android:textColor="@color/text_color"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/EmergencyButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/emergency_icon" />

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/atras" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@color/ScrollBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon_default_user"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Nombre"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="35sp"
                android:layout_below="@+id/profileImage"/>
            <Button
                android:id="@+id/misTrabajosButton"
                android:layout_width="360dp"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/mis_trabajos"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="#1B787D"
                app:cornerRadius="20dp"
                android:layout_below="@id/name"
                android:layout_centerHorizontal="true" />
            <Button
                android:id="@+id/miProgresoButton"
                android:layout_width="360dp"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/mi_progreso"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="#3EB7C8"
                app:cornerRadius="20dp"
                android:layout_below="@id/misTrabajosButton"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/editarPerfilButton"
                android:layout_width="360dp"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/editar_perfil"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="#FFA018"
                app:cornerRadius="20dp"
                android:layout_below="@id/miProgresoButton"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>